# drone

./: .gitignore  1234.py  Cargo.toml  DEVICE_ATTITUDE_listen.py  another_example.py  ard.py  build_send.sh  bytes.py  commit_and_send  config.json  connection.py  control.py  crsf_controller.py  crsf_test.py  exmaple.py  listen.py  listen_to_telemetry.py  mavlink.py  msp.py  py.py  test.py  test_2.py  test_bytes.py  test_open_ai.py  uart.py
.cargo/: config.toml
MSP/: README.md  basic_balance.py  get_attitude.py  msp.py  stabilze.py  test.py  util.py
betaflight/presets/: BTFL_cli_backup_GLIDE_5"_20250704_172225_MAMBAF722_2022B.txt
drone_service/: README.md  drone.service
examples/: listen.rs
raspi/: MSP_105.py  MSP_108.py  MSP_108_listen.py  ard_MSP_108.py  connection.py  listen.py  mavlink.py  pyMultiwii.py  received_message.py  send.py  struct.py  test.py  test_struct.py
raspi/CRSF/: DEVICE_ATTITUDE_listen.py  DEVICE_INFO_listen.py  DEVICE_INFO_send.py  connection.py  example.py  listen_all.py  listen_test.py  listen_to_telemetry.py  new_test.py  packet_types.py  throttle_command.py
raspi/MAVlink/: arm.py  connection.py  listen_test.py  test.py  test_RC.py
raspi/MSP_RC_105/: MSP_105_listen.py  MSP_105_send.py
raspi/MSP_RC_200/: MSP_200_listen.py  MSP_200_send.py  connection.py
raspi/MultiWii/: MSP_200_send.py  board.py  connection.py  control.py  msp.py  rc.py  show_attitude.py
raspi_services/: live_camera.service
scripts/: build_send.sh  start_test_server.sh  test_post_call.sh
src/: app.rs  app_data.rs  control_server.rs  dualsense_controller.rs  error.rs  fc_comms.rs  lib.rs  logger.rs  main.rs  messages.rs  udp_server.rs
src/dualsense_controller/: state.rs
src/fc_comms/: rc_controls.rs
static/: index.css  index.html  index.js
